--- a/demo/modules/customer/myActivity.html
+++ b/demo/modules/customer/myActivity.html
@@ -6,6 +6,7 @@
 <title>碳普惠</title>
 <link rel="stylesheet" href="../../statics/css/base.css"/>
 <link rel="stylesheet" href="../../statics/css/newStyle.css"/>
+<link rel="stylesheet" href="../../statics/css/customer.css"/>
 <script src="../../statics/script/config/config.js"></script>
 <script src="../../statics/script/jquery-1.7.2.min.js"></script>
 <script>
