--- a/demo/modules/customer/infoManager.html
+++ b/demo/modules/customer/infoManager.html
@@ -302,7 +302,7 @@
 		  			绑定低碳行为项，可以关联您得低碳数据，核算减碳量！
 		  		</h5>
 		  		<div class="bingding-item">
-		  			<h6 class="item-title" onclick="toggleShow(this);">羊城通/岭南通<a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
+		  			<h6 class="item-title" onclick="infoManager.toggleShow(this);">羊城通/岭南通<a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
 		  			<div class="item-content">
 		  				<div class="wrap-item">
 		  					<label class="content-left">羊城通/岭南通卡号：</label>
@@ -315,7 +315,7 @@
 		  			</div>
 		  		</div>
 		  		<div class="bingding-item">
-		  			<h6 class="item-title"  onclick="toggleShow(this);">管道天然气用户编号<a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
+		  			<h6 class="item-title"  onclick="infoManager.toggleShow(this);">管道天然气用户编号<a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
 		  			<div class="item-content">
 		  				<div class="wrap-item">
 		  					<label class="content-left">管道天然气用户编号：</label>
@@ -327,7 +327,7 @@
 		  			</div>
 		  		</div>
 		  		<div class="bingding-item">
-		  			<h6 class="item-title" onclick="toggleShow(this);">光伏发电用户编号<a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
+		  			<h6 class="item-title" onclick="infoManager.toggleShow(this);">光伏发电用户编号<a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
 		  			<div class="item-content">
 		  				<div class="wrap-item">
 		  					<label class="content-left">光伏发电用户编号：</label>
@@ -339,7 +339,7 @@
 		  			</div>
 		  		</div>
 		  		<div class="bingding-item">
-		  			<h6 class="item-title" onclick="toggleShow(this);">用水用户编号<span class="bingding-tip">已绑定</span><a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
+		  			<h6 class="item-title" onclick="infoManager.toggleShow(this);">用水用户编号<span class="bingding-tip">已绑定</span><a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
 		  			<div class="item-content">
 		  				<div class="wrap-item">
 		  					<label class="content-left">用水用户编号：</label>
@@ -351,7 +351,7 @@
 		  			</div>
 		  		</div>
 		  		<div class="bingding-item">
-		  			<h6 class="item-title" onclick="toggleShow(this);">社区门牌号<a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
+		  			<h6 class="item-title" onclick="infoManager.toggleShow(this);">社区门牌号<a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
 		  			<div class="item-content">
 		  				<div class="wrap-item">
 		  					<label class="content-left">社区门牌号：</label>
@@ -364,7 +364,7 @@
 		  			</div>
 		  		</div>
 		  		<div class="bingding-item">
-		  			<h6 class="item-title" onclick="toggleShow(this);">车牌号<a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
+		  			<h6 class="item-title" onclick="infoManager.toggleShow(this);">车牌号<a href="javascript:" onclick="modifyContent(event,this);" class="modify">修改</a></h6>
 		  			<div class="item-content">
 		  				<div class="wrap-item">
 		  					<label class="content-left">车牌号：</label>
