--- a/demo/modules/customer/myActivity.html
+++ b/demo/modules/customer/myActivity.html
@@ -7,8 +7,9 @@
 <link rel="stylesheet" href="../../statics/css/base.css"/>
 <link rel="stylesheet" href="../../statics/css/newStyle.css"/>
 <link rel="stylesheet" href="../../statics/css/customer.css"/>
-<script src="../../statics/script/config/config.js"></script>
 <script src="../../statics/script/jquery-1.7.2.min.js"></script>
+<script src="../../statics/script/config/config.js"></script>
+
 <script>
 	function toggleTab(obj,obj0,obj1){
 		$(obj).addClass("active-item");
@@ -192,6 +193,32 @@
 		  			<li class="left-item"><a href="">实名认证</a></li>
 		  		</ul>
 		  	</div>
+		  	<div class="showInfo" id="showInfo">
+			  	<div class="showInfo-up">
+						<div class="up-right">
+							<img src="../../statics/image/atvatar.png" />
+						</div>
+						<div class="up-left">
+							<h5>史女士<i class="sex-man"></i></h5>
+							<p class="up-provice">广州</p>
+							<p>初恋无限好，只是挂得早<a href="" class="iconEdit"></a></p>
+						</div>
+					</div>
+					<div class="showInfo-down">
+						<div class="down-item">
+							<span class="item-left">所在社区</span>
+							<div class="item-right"><span>电子五所社区</span></div>
+						</div>
+						<div class="down-item">
+							<span class="item-left">关注的景区</span>
+							<div class="item-right"><span>电子五所社区</span>,<span>电社区</span>,<span>电子五所</span></div>
+						</div>
+						<div class="down-item express-item">
+							<span class="item-left">碳友印象</span>
+							<div class="item-right"><span class="expression0">电脑高手</span><span class="expression1">宅男</span><span class="expression2">技术牛人</span><span class="expression3">技术大牛</span></div>
+						</div>
+					</div>
+				</div>
 		  </div>
 		  <div class="customer-right">
 		  	<div class="customerTab">
