--- a/demo/modules/customer/myNotice.html
+++ b/demo/modules/customer/myNotice.html
@@ -8,16 +8,9 @@
 <link rel="stylesheet" href="../../statics/css/newStyle.css"/>
 <link rel="stylesheet" href="../../statics/css/customer.css"/>
 <link rel="stylesheet" href="../../statics/css/style1115.css"/>
-<script src="../../statics/script/config/config.js"></script>
 <script src="../../statics/script/jquery-1.7.2.min.js"></script>
-<script>
-	function toggleTab(obj,obj0,obj1){
-		$(obj).addClass("active-item");
-		$(obj).siblings().removeClass("active-item");
-		$("#"+obj0).css("display","block");
-    	$("#"+obj1).css("display","none");
-	}
-</script>
+<script src="../../statics/script/config/config.js"></script>
+<script src="script/customer.js"></script>
 </head>
 <body>
 <!--头部开始-->
@@ -197,13 +190,13 @@
 		  <div class="customer-right">
 		  	<div class="customerTab">
 		  		<ul class="tab">
-					<li class="tab-item" onclick="toggleTab(this,'remindOut','remindStart')"><span class="tip">4</span>系统消息</li>
-					<li class="tab-item active-item" onclick="toggleTab(this,'remindStart','remindOut')"><span class="tip">3</span>碳币通知</li>
-					<li class="tab-item" onclick="toggleTab(this,'remindStart','remindOut')"><span class="tip">2</span>好友申请</li>
-					<li class="tab-item" onclick="toggleTab(this,'remindStart','remindOut')"><span class="tip">1</span>私信</li>
+					<li class="tab-item active-item"><span class="tip">4</span>系统消息</li>
+					<li class="tab-item"><span class="tip">3</span>碳币通知</li>
+					<li class="tab-item"><span class="tip">2</span>好友申请</li>
+					<li class="tab-item"><span class="tip">1</span>私信</li>
 				</ul>
 		  	</div> 
-		  	<div class="wrap-list-content list-content-activity hide">
+		  	<div class="wrap-list-content list-content-activity">
 		  		<div class="list-activity">
 		  			<div class="sort-parts">
 		  				<span class="sort-item">投诉与建议</span>
@@ -213,7 +206,7 @@
 		  			<div class="sort-activity fold-bar">		  				
 			  			<div class="fold-list-box">
 			  				<ul class="fold-list">
-			  					<li class="active">
+			  					<li class="active" onclick="toggleFold(this)">
 			  						<a href="javascript:" class="fold-handle">
 			  							<span class="checkbox"></span>
 			  							系统投诉 / 审核反馈
@@ -225,7 +218,7 @@
 			  							</p>
 			  						</div>
 			  					</li>
-			  					<li>
+			  					<li onclick="toggleFold(this);">
 			  						<a href="javascript:" class="fold-handle">
 			  							<span class="checkbox"></span>
 			  							系统投诉 / 审核反馈
@@ -237,7 +230,7 @@
 			  							</p>
 			  						</div>
 			  					</li>
-			  					<li>
+			  					<li onclick="toggleFold(this);">
 			  						<a href="javascript:" class="fold-handle sign-gray">
 			  							<span class="checkbox"></span>
 			  							系统消息 / 提醒消息
@@ -290,8 +283,7 @@
 											<li class="input-item">
 												<label><span>*</span>留言：</label>
 												<div class="input-right">
-													<textarea type="text" id="findTitle" rows="6" placeholder="请输入投诉内容" class="input2 modalInput">
-													</textarea>
+													<textarea type="text" id="findTitle" rows="6" placeholder="请输入投诉内容" class="input2 modalInput"></textarea>
 													<p class="align-right">还可以输入<span class="sign-red">50</span>个字</p>
 												</div>
 											</li>
@@ -310,8 +302,7 @@
 											<li class="input-item">
 												<label><span>*</span>留言：</label>
 												<div class="input-right">
-													<textarea type="text" id="findTitle" rows="6" placeholder="请输入投诉内容" class="input2 modalInput">
-													</textarea>
+													<textarea type="text" id="findTitle" rows="6" placeholder="请输入投诉内容" class="input2 modalInput"></textarea>
 													<p class="align-right">还可以输入<span class="sign-red">50</span>个字</p>
 												</div>
 											</li>
@@ -330,12 +321,202 @@
 		  			</div>
 		  		</div>
 		  	</div>
-		  	<div class="wrap-list-content list-content-activity">
+		  	<div class="wrap-list-content list-content-activity hide">
 		  		<div class="list-activity">
 		  			<div class="sort-parts">
 		  				<span class="sort-item active-item">全部已读</span>
 		  				<span class="sort-item">删除</span>
 		  			</div>
+		  			<div class="notice-box">
+			  			<ul class="notice-list">
+			  				<li>
+			  					<b class="time">2016-11-08 10:43</b>
+			  					<p><span class="sign-blue">[系统]</span><label class="text">系统向您发放400碳币</label><span class="sign-plus">+400</span></p>
+			  				</li>
+			  				<li>
+			  					<b class="time">2016-11-08 10:43</b>
+			  					<p><span class="sign-orange">[消费]</span><label class="text">系统向您发放400碳币</label><span class="sign-minus">-10</span></p>
+			  				</li>
+			  				<li>
+			  					<b class="time">2016-11-08 10:43</b>
+			  					<p><span class="sign-green">[系统]</span><label class="text">系统向您发放400碳币</label><span class="sign-minus">-20</span></p>
+			  				</li>
+			  				<li>
+			  					<b class="time">2016-11-08 10:43</b>
+			  					<p><span class="sign-gray">[消费]</span><label class="text sign-gray">系统向您发放400碳币</label><span class="sign-minus">-20</span></p>
+			  				</li>
+			  			</ul>
+
+			  		</div>
+		  		</div>
+		  	</div>
+		  	<div class="wrap-list-content list-content-activity hide">
+		  		<div class="list-activity  friendList">
+		  			<div class="sort-parts">
+		  				<span class="sort-item">碳友申请</span>
+		  				<span class="sort-item active-item">我的申请</span>
+		  				<span class="sort-item">清空列表</span>
+		  			</div>
+			  		<!--碳友申请-->
+		  			<ul style="display:none">
+		  				<li class="activity-item apply-item">
+		  					<div class="activity-right">
+		  						<a href="" class="doing">
+		  							接受
+		  						</a>
+		  						<a href="" class="">
+		  							拒绝
+		  						</a>
+		  					</div>
+		  					<div class="activity-left">
+			  					<div class="wrap-pic">
+			  						<img src="../../statics/image/img-person.png">
+			  					</div>
+			  					<div class="activity-info">
+			  						<h5 class="sex-boy"><span>西木</span></h5>
+			  						<div class="activity-common nopadding">
+			  							出发日期:2016-11-02 09:22
+			  						</div>
+			  						<div class="activity-common activity-details nopadding">
+			  							线路:白云机场
+			  						</div>
+			  						<p class="autograph">这里是签名这里是签名这里是签名这里是签名这里是签名</p>
+			  					</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item apply-item">
+		  					<div class="activity-right">
+		  						<a href="" class="ended">
+		  							已拒绝
+		  						</a>
+		  					</div>
+		  					<div class="activity-left">
+			  					<div class="wrap-pic">
+			  						<img src="../../statics/image/img-person2.png">
+			  					</div>
+			  					<div class="activity-info">
+			  						<h5 class="sex-girl"><span>西木</span></h5>
+			  						<div class="activity-common nopadding">
+			  							出发日期:2016-11-02 09:22
+			  						</div>
+			  						<div class="activity-common activity-details nopadding">
+			  							线路:白云机场
+			  						</div>
+			  						<p class="autograph">这里是签名这里是签名这里是签名这里是签名这里是签名</p>
+			  					</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item apply-item">
+		  					<div class="activity-right">
+		  						<a href="" class="ended">
+		  							已同意
+		  						</a>
+		  					</div>
+		  					<div class="activity-left">
+			  					<div class="wrap-pic">
+			  						<img src="../../statics/image/img-person2.png">
+			  					</div>
+			  					<div class="activity-info">
+			  						<h5 class="sex-girl"><span>西木</span></h5>
+			  						<div class="activity-common nopadding">
+			  							出发日期:2016-11-02 09:22
+			  						</div>
+			  						<div class="activity-common activity-details nopadding">
+			  							线路:白云机场
+			  						</div>
+			  						<p class="autograph">这里是签名这里是签名这里是签名这里是签名这里是签名</p>
+			  					</div>
+		  					</div>
+		  				</li>
+		  			</ul>
+		  			<!--我的申请-->
+		  			<ul>
+		  				<li class="activity-item apply-item">
+		  					<div class="activity-right">
+		  						<a href="" class="">
+		  							发私信
+		  						</a>
+		  						<a href="" class="friendOperate">
+		  							同意了你的申请
+		  						</a>
+		  					</div>
+		  					<div class="activity-left">
+			  					<div class="wrap-pic">
+			  						<img src="../../statics/image/img-person.png">
+			  					</div>
+			  					<div class="activity-info">
+			  						<h5 class="sex-boy"><span>西木</span></h5>
+			  						<div class="activity-common nopadding" style="margin-top:0;margin-bottom:3px;">
+			  							出发日期:2016-11-02 09:22
+			  						</div>
+			  						<p class="autograph">这里是签名这里是签名这里是签名这里是签名这里是签名</p>
+			  					</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item apply-item">
+		  					<div class="activity-right">
+		  						<a href="" class="friendOperate">
+		  							拒绝了你的申请
+		  						</a>
+		  					</div>
+		  					<div class="activity-left">
+			  					<div class="wrap-pic">
+			  						<img src="../../statics/image/img-person2.png">
+			  					</div>
+			  					<div class="activity-info">
+			  						<h5 class="sex-girl"><span>西木</span></h5>
+			  						<div class="activity-common nopadding" style="margin-top:0;margin-bottom:3px;">
+			  							出发日期:2016-11-02 09:22
+			  						</div>
+			  						<p class="autograph">这里是签名这里是签名这里是签名这里是签名这里是签名</p>
+			  					</div>
+		  					</div>
+		  				</li>
+		  			</ul>
+		  			<!--情况列表-->
+			  		<div class="empty-box" style="display:none;">
+			  			您还没有申请添加好友！
+			  		</div>
+		  		</div>
+		  	</div>
+		  	<!--私信-->
+		  	<div class="wrap-list-content list-content-activity hide">
+		  		<div class="list-activity friendList">
+		  			<ul>
+		  				<li class="activity-item personal-item read-item">
+		  					<div class="activity-left">
+			  					<div class="wrap-pic">
+			  						<img src="../../statics/image/img-person.png">
+			  					</div>
+			  					<div class="activity-info">
+			  						<h5><span>西木</span><b class="time">11-18 11:05</b></h5>
+			  						<p class="autograph">这里是签名这里是签名这里是签名这里是签名这里是签名</p>
+			  					</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item personal-item">
+		  					<div class="activity-left">
+			  					<div class="wrap-pic">
+			  						<img src="../../statics/image/img-person2.png">
+			  					</div>
+			  					<div class="activity-info">
+			  						<h5 ><span>西木</span></h5>
+			  						<p class="autograph">这里是签名这里是签名这里是签名这里是签名这里是签名</p>
+			  					</div>
+		  					</div>
+		  				</li>
+		  				<li class="activity-item personal-item">
+		  					<div class="activity-left">
+			  					<div class="wrap-pic">
+			  						<img src="../../statics/image/img-person2.png">
+			  					</div>
+			  					<div class="activity-info">
+			  						<h5><span>西木</span></h5>
+			  						<p class="autograph">这里是签名这里是签名这里是签名这里是签名这里是签名</p>
+			  					</div>
+		  					</div>
+		  				</li>
+		  			</ul>
 		  		</div>
 		  	</div>
 		  </div>
@@ -383,6 +564,13 @@
 
 	})
 
+	function toggleFold(obj){
+     if($(obj).find('.fold-detail').css("display")=="block"){
+     	  $(obj).removeClass('active');
+     }else{
+     	  $(obj).addClass('active');
+     }
+	}
 
 </script>
 	</html>
